<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemAdministracion"
            android:icon="@drawable/ic_sheep"
            android:title="Administración Ovinos" />
        <item
            android:id="@+id/itemSintomas"
            android:icon="@drawable/ic_thermometer"
            android:title="Sintomas"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

    <item android:title="@string/perfil">
        <menu>

            <item
                android:id="@+id/itemCambioPefil"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/cambio_perfil" />
        </menu>
    </item>


    <item android:title="">

        <menu>

            <item
                android:id="@+id/itemAcerca"
                android:title="@string/acerca"/>

        </menu>


    </item>


</menu>
