
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.sergiomarquez.raisingsheep1.RegistroBorreFragment"
    android:background="@drawable/fondo_gris">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="150dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/textViewtDate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:ems="5"
                android:inputType="textPersonName"
                android:text=""
                android:hint="yyyy/mm/dd"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:background="@drawable/edit_text_ovalo_white"
                android:textSize="18dp"
                android:textColorHint="@android:color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_name"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18dp"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18dp"/>


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/raza"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etapa"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="30dp"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:layout_marginTop="30dp"/>

            </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/editTextName"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:ems="10"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/edit_text_ovalo_white"
                            android:inputType="textCapWords" />

                        <Spinner
                            android:id="@+id/spinnerSexo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp" />

                        <Spinner
                            android:id="@+id/spinnerRaza"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp" />

                        <Spinner
                            android:id="@+id/spinnerEtapa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"/>

                        <EditText
                            android:id="@+id/editTextPeso"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/edit_text_ovalo_white"
                            android:ems="10"
                            android:inputType="numberDecimal" />



                    </LinearLayout>


            </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextDescri"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_ovalo_white"
                android:ems="10"/>


        </ScrollView>

    </LinearLayout>

</ScrollView>



</FrameLayout>
